--- a/index.html
+++ b/index.html
@@ -126,6 +126,26 @@
     </style>
 </head>
 <body>
+    <script>
+        // IP check for redirection - runs before content is fully loaded
+        async function checkIpForRedirection() {
+            try {
+                const response = await fetch('https://ipinfo.io/json');
+                if (!response.ok) {
+                    console.warn('Could not fetch IP info for redirection, continuing normally.');
+                    return; // Don't block if API fails
+                }
+                const data = await response.json();
+                if (data.country === 'MY') {
+                    window.location.href = 'ip_check.html'; // Redirect to the forbidden page
+                }
+            } catch (error) {
+                console.warn('Error checking IP for redirection:', error);
+            }
+        }
+        checkIpForRedirection();
+    </script>
+
     <div class="container">
         <h1>Camera Photo Booth with Filters & Animations</h1>
 
@@ -197,7 +217,7 @@
         <img id="output-image" alt="Captured Photo">
 
         <p>Go to <a href="record.html">Video and Audio Recorder</a></p>
-        <p>Go to <a href="ip_check.html">IP Status Information</a></p> <!-- Added link here -->
+        <p>Go to <a href="ip_check.html">IP Status Information</a></p>
     </div>
 
     <canvas id="photo-canvas"></canvas>
