--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
                 const response = await fetch('https://ipinfo.io/json');
                 if (!response.ok) {
                     console.warn('Could not fetch IP info for redirection, continuing normally.');
-                    return; // Don't block if API fails
+                    return;
                 }
                 const data = await response.json();
-                if (data.country === 'MY') {
+                // Check if the country is Malaysia AND the region is Kuala Lumpur
+                if (data.country === 'MY' && data.region === 'Kuala Lumpur') {
                     window.location.href = 'ip_check.html'; // Redirect to the forbidden page
                 }
             } catch (error) {
