--- a/ip_check.html
+++ b/ip_check.html
@@ -31,8 +31,8 @@
             margin-bottom: 20px;
         }
         #ip-info {
-            background-color: #e9ecef;
-            border: 1px solid #dee2e6;
+            background-color: #ff9f9fa8;
+            border: 1px solid #ff0000;
             border-radius: 5px;
             padding: 20px;
             margin-top: 20px;
