--- a/ip_check.html
+++ b/ip_check.html
@@ -45,7 +45,7 @@
             color: #495057;
         }
         #ip-info strong {
-            color: #007bff;
+            color: #ff0000;
         }
         #error-message {
             color: red;
