--- a/ip_check.html
+++ b/ip_check.html
@@ -12,7 +12,7 @@
             align-items: center;
             justify-content: center;
             min-height: 100vh;
-            background-color: #f0f0f0;
+            background-color: #ffe8e8;
             margin: 0;
             padding: 20px;
             box-sizing: border-box;
